# first-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  models.json.example  pyproject.toml
langchain_mcp_agent/: main.py
langchain_mcp_agent/mcp_clients/: client.py
langchain_mcp_agent/mcp_server/browser_use/: _agent_master.py  bu_easy_agent.py  server.py
langchain_mcp_agent/mcp_server/browser_use/controller/: mine_controller.py
langchain_mcp_agent/tools/: _model_servant.py
scripts/: version.py
src/mcp_clients/: client.py
